--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ readme = "README.md"
 packages = [{include = "pipeline_feature_selection"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.9,<3.11"
 pandas = "^1.5.0"
+scipy = "^1.9.1"
+scikit-learn = "^1.1.2"
 
 
 [build-system]
